app/assets/stylesheets/style.scss
/* ... */
.clear {
  clear: both;
  height: 0;
}
.content {
  height: auto;
  margin: 0 auto;
  min-height: 500px;
  position: relative;
  width: 960px;
  h1 {
    clear: both;
    color: #eb8723;
    font: 700 2em 'Lato', georgia, 'times new roman', serif;
  }
  p.question {
    color: #3a878b;
    font: 400 1.3em 'Lato', georgia, 'times new roman', serif;
    min-height: 1em;
  }
  nav {
    padding: 10px 0;
    width: 79%;
    margin: 1em;
  }
  .breadcrumbs {
    height: auto;
    text-align: left;
  }
  #session {
    clear: right;
    float: right;
    height: auto;
    padding: 10px 0;
    text-align: right;
  }
  #activity-actions {
    clear: both;
    height: 20px;
  }
  #activity-actions #new-menu {
    float: right;
    margin-top: 10px;
  }
  p.active-runs {
    color: red;
    border: 1px solid red;
    padding: 3px;
    margin: 5px;
  }
}
.title {
  padding: 1% 0;
  width: 100%;
}
.page-nav {
  position: absolute;
  right: 0;
  top: 50px;
  .secondary {
    background: #fff;
    bottom: 0 !important;
    clear: both;
    height: 28px !important;
    margin-top: 542px;
    padding: 10px 0;
    position: absolute;
    right: 0;
    text-align: right !important;
    width: 100% !important;
  }
  a {
    background: #6fc5d8;
    border-radius: 50%;
    color: #fff;
    display: block;
    float: left;
    font-size: .9em;
    height: 18px;
    margin-left: 5px;
    padding: 5px;
    text-align: center;
    text-decoration: none;
    width: 18px;
  }
  a.previous {
    background: transparent url(/assets/page-nav-prev.png) no-repeat;
    height: 30px;
    margin-right: -1px;
    padding: 0;
    width: 30px;
  }
  a.next {
    background: transparent url(/assets/page-nav-next.png) no-repeat;
    height: 30px;
    margin-left: 0px;
    padding: 0px;
    width: 30px;
  }
  a.previous.disabled {
    background: transparent url(/assets/page-nav-prev-dis.png) no-repeat;
  }
  a.next.disabled {
    background: transparent url(/assets/page-nav-next-dis.png) no-repeat;
    background-size: 100% 100%;
  }
  a.active {
    background: #aaa;
  }
}
.text {
  float: left;
  height: auto;
  padding: 1% 1% 1% 0;
  width: 38%;
}
.stacked-right .text {
  float: right;
  padding: 1% 0 1% 1%;
}
.text.full-width {
  padding: 0;
  width: 100%;
}
.text li, .text p, .text ul {
  line-height: 130%;
  margin-bottom: 1em;
}
.text ul, body.full .title ul {
  list-style: disc;
  margin: 10px 0 0 20px;
}
.full .title h2 {
  margin: 20px 0 0;
}
.instructions h2, .model-instructions h2, h2.activity-list {
  color: #75a643 !important;
  font: 500 1.5em 'Lato', georgia, 'times new roman', serif;
}
.questions .embeddable, .authorable_open_response, .authorable_multiple_choice, .authorable_image_question {
  background: #eee;
  margin-bottom: 1em;
  padding: 3%;
  width: 94%;
  border-radius: 13px;
}
.questions {
  label {
    display: block;
    margin-bottom: 1em;
    padding-left: 1.7em;
    text-indent: -1.7em;
  }
  .xhtml p {
    background: transparent;
    clear: both;
    float: none;
    height: auto;
    min-height: 0;
    width: 100%;
  }
  textarea {
    height: 200px;
    margin: .5em 0 0;
    width: 98%;
  }
}
.questions.full-width {
  .embeddable {
    float: left;
    margin: 1% .5% 1% 0;
    min-height: 243px;
  }
}
.questions.full-width.two {
  .embeddable {
    width: 43%;
  }
  .embeddable:nth-child(2n) {
    margin: 1% 0 1% 1.25%;
  }
}
.questions.full-width.three {
  .embeddable {
    width: 26%;
  }
  .embeddable:nth-child(3n) {
    margin: 1% 0;
  }
}
.other {
  float: right;
  height: auto;
  width: 60%;
}
.stacked-right .other {
  float: left;
  height: auto;
  width: 60%;
}
.full .other, .other.full-width {
  clear: both;
  float: left;
  width: 100%;
}
.model, .model-edit {
  background: #fff;
  height: auto;
  margin: 13px 0 20px;
  overflow: hidden;
  position: relative;
  width: 100%;
  iframe {
    border: none;
    height: 435px;
    margin: 3px 0 0;
    padding: 0;
    width: 100%;
  }
}
.toolbar {
  background: #6fc5d8;
  color: #fff;
  font-size: .9em;
  height: 15px;
  padding: 5px;
  text-align: right;
  a {
    color: #fff;
    text-decoration: none;
  }
}
.model-instructions {
  position: absolute;
  right: 10px;
  top: 37px;
  width: 400px;
  z-index: 1000;
  img {
    width: 100%;
  }
  button {
    background: url(/assets/watch-tutorial.png) no-repeat;
    display: block;
    height: 34px;
    margin: 15px auto;
    text-indent: -999em;
    width: 174px;
  }
}
.sidebar {
  background: #6fc5d8;
  clear: both;
  color: #fff;
  height: auto;
  margin-top: 20px;
  min-height: 224px;
  padding: 1%;
  border-radius: 13px;
  h2 {
    font: 500 2em 'Lato', georgia, 'times new roman', serif;
    margin: 0 0 20px;
  }
  img {
    float: left;
    margin: 0 10px 0 0;
  }
  p {
    font-size: 1em;
    line-height: 150%;
    margin-bottom: 1em;
  }
  small {
    font-size: .9em;
  }
}
.related {
  background: #6fc5d8;
  clear: both;
  color: #fff;
  height: auto;
  margin-top: 20px;
  min-height: 224px;
  padding: 1%;
  border-radius: 13px;
  a {
    border-bottom: dotted 1px #fff;
    color: #fff;
    text-decoration: none;
  }
  h2 {
    margin-bottom: 10px;
    text-align: center;
  }
  h3 {
    font: 700 1.3em 'Lato', georgia, 'times new roman', serif;
  }
  ul {
    list-style: none;
    margin: 0;
  }
  li {
    float: left;
    margin: 1%;
    width: 31%;
  }
  img {
    float: right;
    margin: 3px 0 0 10px;
  }
}
body.summary {
  .question {
    padding: 10px 0;
  }
  .print {
    clear: right;
    float: right;
  }
}
div.summary {
    clear: both;
}
#footer {
  background: #bddfdf;
  clear: both;
  color: #3a878b;
  margin-top: 20px;
  display: block;
  padding: 1em;
  div {
    margin: 0 auto;
    width: 960px;
  }
}
#footer a {
  color: #3a878b;
}
#overlay {
  background: #000;
  display: none;
  height: 100%;
  left: 0;
  opacity: .75;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10;
}
/* ... */

